Add id to product schedule index/view

--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -24,6 +24,11 @@
           Create new Product Schedule
         </ng-template>
       </div>
+
+      <div *ngIf="!addMode" class="entity-view__info__data__other">
+        <span class="entity-view__info__data__other__label">ID:</span>
+        <span>{{entity.id}}</span>
+      </div>
     </div>
 
     <div *ngIf="!addMode" class="entity-view__info__edit">
