--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -67,7 +67,7 @@
           </div>
         </div>
 
-        <add-schedule (addSchedule)="addScheduleToProduct($event)"></add-schedule>
+        <add-schedule #addScheduleComponent (addSchedule)="addScheduleToProduct($event)"></add-schedule>
       </div>
 
       <table-memory [title]="'Schedule'"
