--- a/src/app/pages/customers-page/customer-view/customer-view.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-view.component.html
@@ -153,7 +153,7 @@
   </div>
 
   <ng-template #addCustomer>
-    <customer-add-new [customer]="entity" (save)="saveOrUpdate($event)"></customer-add-new>
+    <customer-add-new #customerAddNew [customer]="entity" (save)="saveOrUpdate($event)"></customer-add-new>
   </ng-template>
 
 </div>
