--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -154,6 +154,12 @@ dropdown-component {
 .default-autocomplete-input {
   position: relative;
 
+  &--full-width {
+    md-input-container {
+      width: 100%;
+    }
+  }
+
   &__input {
     display: flex;
     align-items: center;
