--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -151,8 +151,9 @@ $blue-color: #4A90E2;
   }
 
   &__navigation {
+    display: flex;
+    align-items: center;
     height: 50px;
-    line-height: 50px;
     padding-left: 30px;
     background-color: #F3F3F3;
     border-top: 1px solid rgba(0, 0, 0, 0.4);
