--- a/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
+++ b/src/app/shared/components/autocomplete-input/autocomplete-input.component.html
@@ -3,7 +3,7 @@
     <md-input-container>
       <input #input md-input autocomplete=off (ngModelChange)="change($event)" [ngModel]="currentValue" (keydown)="onKey($event)" [required]="required" (blur)="blurred()" (focus)="focused()" (click)="focused()" [disabled]="disabled" placeholder="{{placeholder}}" type="text">
     </md-input-container>
-    <md-icon *ngIf="showCancelButton" (click)="clearCurrentValue(input)">cancel</md-icon>
+    <md-icon [class.rotated]="showOptions" *ngIf="showArrow" (click)="arrowClicked(input)">keyboard_arrow_down</md-icon>
   </div>
   <div #optionsContainer class="default-autocomplete-input__options" *ngIf="showOptions && filteredOptions.length > 0">
     <div #autocompleteOption
