--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
@@ -1,5 +1,4 @@
 .email-template-view {
-
   &__dropdown {
     width: 200px;
 
@@ -27,6 +26,7 @@
     min-height: 200px;
     border: 1px solid rgba(0,0,0,0.2);
     padding: 5px;
+    font-size: 14px;
   }
 
   &__label {
@@ -44,4 +44,12 @@
     overflow: hidden;
     height: 0;
   }
+}
+
+token-list {
+  padding: 15px;
+}
+
+.input-form {
+  width: 600px;
 }
