--- a/src/app/pages/email-templates-page/email-template-view/token-view/token-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/token-view/token-view.component.html
@@ -1,5 +1,10 @@
 <div class="token-view__content" *ngIf="token">
-  <div class="token-view__path" (click)="tokenSelected.emit(token)" *ngIf="token.isTerminal && token.contains(filter)">{{token.path | lowercase}}</div>
+
+  <div class="token-view__path" (click)="tokenSelected.emit(token)" *ngIf="token.isTerminal && token.contains(filter)">
+    <div class="token-view__path__title">{{token.title}}</div>
+    <div class="token-view__path__token"><span>{{</span>{{token.path | lowercase}}<span>}}</span></div>
+    <div class="token-view__path__description">{{token.description}}</div>
+  </div>
 
   <token-view class="token-view__subtokens" (tokenSelected)="tokenSelected.emit($event)" *ngFor="let s of token.subtokens" [token]="s" [filter]="filter"></token-view>
 </div>
