--- a/src/app/pages/email-templates-page/email-template-view/token-list/token-list.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/token-list/token-list.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="loaded">
+<div class="token-list" *ngIf="loaded">
 
-  <div class="flex-custom">
+  <div class="token-list__header flex-custom">
     <md-input-container>
       <input type="text" placeholder="Search" md-input [(ngModel)]="filterString" autocomplete=off>
     </md-input-container>
