--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.scss
@@ -1,4 +1,12 @@
 .email-template-view {
+  &__card-container {
+    align-items: flex-start;
+
+    @media only screen and (max-width: 800px) {
+      flex-wrap: wrap;
+    }
+  }
+
   &__dropdown {
     width: 200px;
 
@@ -47,5 +55,5 @@
 }
 
 .input-form {
-  width: 600px;
+  width: 650px;
 }
