--- a/src/app/pages/email-templates-page/email-template-view/token-list/token-list.component.scss
+++ b/src/app/pages/email-templates-page/email-template-view/token-list/token-list.component.scss
@@ -14,12 +14,11 @@ dropdown-component {
 
 .token-list {
   &__container {
-    margin-top: 20px;
     overflow: auto;
     max-height: 430px;
   }
 
   &__header {
-    padding: 15px;
+    padding: 11px 15px;
   }
 }
