Modify snack bar messages

--- a/src/assets/scss/_notifications.scss
+++ b/src/assets/scss/_notifications.scss
@@ -203,3 +203,9 @@ notifications {
     }
   }
 }
+
+snack-bar-container {
+  height: auto !important;
+  padding: 0 !important;
+  margin-bottom: 30px;
+}
